# Hardwhere

./: .gitignore  Cargo.toml  LICENSE  README.md  build.gradle  config.toml  config.toml.example  hardwhere.patch  hardwhere_daemon.service  lars.patch  lars_daemon.service  migrate_electric_custom_fields.py  migrate_tu_ids.py  seesm.patch  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: ic_android_magnifier.xml  ic_empty_white_24dp.xml  ic_filter_list_white_24dp.xml  ic_qr_code.xml  ic_type_white_24dp.xml
app/src/main/res/drawable-v24/: icon_hardwhere_box.xml  icon_hardwhere_front.xml
app/src/main/res/layout/: activity_login.xml  app_bar_main.xml  asset_attribute_view_text.xml  asset_text_view_text.xml  fragment_about.xml  fragment_asset_filter.xml  fragment_asset_filter_exact.xml  fragment_asset_info.xml  fragment_asset_list.xml  fragment_asset_sort.xml  fragment_checkin_asset_scanlist.xml  fragment_checkout.xml  fragment_editor.xml  fragment_editor_new.xml  fragment_lent_asset_action.xml  fragment_lent_assets.xml  fragment_lenting.xml  fragment_lenting_asset_scanlist.xml  fragment_my_assets.xml  fragment_myasset_action.xml  fragment_myassets_checkout_scanlist.xml  fragment_own_assets.xml  fragment_scan.xml  fragment_scan_list.xml  fragment_scanner.xml  fragment_selector.xml  fragment_selector_list.xml  fragment_user_asset_list.xml  menu_search_autocomplete.xml  nav_header_main.xml  recycler_about_item.xml  recycler_checkout_item_asset.xml  recycler_layout_assets.xml  recycler_list_item_asset.xml  view_asset_filter.xml
app/src/main/res/menu/: activity_main_drawer.xml  checkin_base.xml  checkin_selection.xml  editor.xml  lent.xml  lenting.xml  my_assets.xml  scan.xml  select.xml  userassets.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/raw/: flaticon.txt  licenses.csv  sentry.txt
app/src/main/res/values/: attrs.xml  (+4 more)
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
gradle/wrapper/: gradle-wrapper.properties
src/: README.md  api.rs  api_snipeit.rs  authentication.rs  cfg.rs  indexer.rs  main.rs  prelude.rs  setup.sql  snipeit.rs  types.rs  webview.rs
static/: colors.css  css.css
static/templates/: assets.html  invalid_autologin.html  login.html  login_successful.html  logout.html
(+250 files in other folders)
