[package]
name = "hardwhere-backend"
version = "0.1.0"
authors = ["Aron Heinecke <aheinecke@seemoo.tu-darmstadt.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# has to be a version matching actix-webs tokio runtime version
mysql_async = "0.29"
actix-web = {version = "4", features = ["openssl"]}
actix-files = "0.6"
# use the same as actix-web
serde_json = "1.0.64"
handlebars = { version = "4.2", features = ["dir_source"] }
actix-session = "0.5"

# web client
awc = "3"

serde = {version = "1", features = ["derive"] }
toml = "0.5"

log = "0.4"
env_logger = "0.9"

thiserror = "1"
